// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTabs matches snapshot for each tab with no rubric 1`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item active"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;

exports[`PageTabs matches snapshot for each tab with no rubric 2`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;

exports[`PageTabs matches snapshot for each tab with no rubric 3`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item active"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;

exports[`PageTabs matches snapshot for each tab with rubric 1`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item active"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Rubric and Exemplar
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;

exports[`PageTabs matches snapshot for each tab with rubric 2`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item active"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Rubric and Exemplar
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;

exports[`PageTabs matches snapshot for each tab with rubric 3`] = `
<ul
  className="nav nav-tabs"
>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Viewer
    </a>
  </li>
  <li
    className="nav-item"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Rubric and Exemplar
    </a>
  </li>
  <li
    className="nav-item active"
    onClick={[Function]}
    role="button"
  >
    <a
      className="nav-link"
    >
      Item Information
    </a>
  </li>
</ul>
`;
